fix spacing of body & update text

--- a/style.css
+++ b/style.css
@@ -114,8 +114,10 @@ p a {
 
 .body p {
     font-size: 1.5rem;
-    width: 95%;
+    /*width: 95%;*/
+
     margin-left: auto;
+    padding: 0 2rem 0 2rem;
 }
 
 .showcaseContainer {
